[tool.poetry]
name = "visionpy"
version = "0.1.0"
description = ""
authors = ["Gpocas <gpocas01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyscreenshot = "^3.1"
pillow = "^10.3.0"
pyperclip = "^1.8.2"
google-cloud-vision = "^3.7.2"
httpx = "^0.27.0"
pytesseract = "^0.3.10"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
